--- a/tftf-chars.html
+++ b/tftf-chars.html
@@ -119,11 +119,13 @@
 <li>buff=加成=增益</li>
 <li>debuff=减益</li>
 <li>DOT=伤害减益（流血/震击/燃烧/酸液）</li>
+<li>L：轻攻击；M：中等攻击/前冲；H：重击</li>
+<li>连击类型：最常用的是LLLMM和MLLLM，或者MLLLL和LLLML</li>
 <li>S技（S1/S2/S3）=大招=特殊技=必杀技</li>
 <li>气=气槽=能量</li>
 <li>平砍=普通攻击，小枪=远程普攻</li>
 <li>撞=近战型重击；炮=远程重击</li>
-<li>普攻连击=打一套。方式有两枪+五连，两枪+四连+S技，四连一撞等</li>
+<li>普攻连击=打一套。方式有两枪+五连，两枪+五连+S技，四连一撞等</li>
 <li>屈防：即使对方防御，也一路打连击（目的可以是造成防御伤害，拖延时间或者推远对手）</li>
 <li>破防=无法格挡。角色的攻击使防御无效。</li>
 <li>霸体=无法阻挡。角色带着光环，并且被打中时不会有中招硬直。</li>
@@ -226,7 +228,7 @@
 <p>通天晓曾经是苹果用户的专属机器人，但除了角色本身的人气外，在游戏中像他在动画中一样是个扶不起的阿斗，虽然官方调整过他那晦涩难懂的招牌，依然泯然众人间。但AI使用的通天晓以其神秘的走位，难猜的S1被人戏称为“亚洲舞王”，属于相当耐揍的坦克型对手。</p>
 <h5 id="能力-2">能力</h5>
 <ul>
-<li>自适应的抗性切换，在受到不同攻击时能逐渐降低伤害。换句话说对付通天晓需要交替使用物理和能量攻击才能保证输出，例如警车可以先揍出10层物理抗性，再用S2两发打出高伤害。但像漂移，雷震和反冲这几位遇到他就实在苦手了，因为他们的普通远程攻击算物理攻击，无法使通天晓的抗性切换。</li>
+<li>自适应的抗性切换，在受到不同攻击时能逐渐降低伤害。换句话说，对付AI通天晓时，需要交替使用物理和能量攻击才能保证输出，例如警车可以先揍出10层物理抗性，再用S2两发打出高伤害。但像漂移，雷震和反冲这几位遇到他就实在苦手了，因为他们的普通远程攻击算物理攻击，无法使通天晓的抗性切换。</li>
 <li>特殊技的破甲条件是对方也有护甲，并且几层护甲就转化成几层破甲，虽然对猩猩队长有很好的克制，却也大大降低了面对非斗士的输出。</li>
 <li>另外小枪有驱散加攻buff的能力，但不像红蜘蛛和犀牛有附加伤害。</li>
 <li>S2在两种抗性累计到10层的时候能获得较大的提升。</li>
@@ -237,14 +239,21 @@
 <p>阿尔茜和警车搭配通天晓，为所有汽车人提升攻击和护甲。</p>
 <h5 id="短板-2">短板</h5>
 <p>在进攻方面，他的输出实在是对不起他这么大的个子。这一点比另一个同样是很肉的蛮汉角色碾碎器要差了很多。</p>
-<p>由于很大一部分能力在防御侧，玩家要加以利用，最稳妥的是吃防御伤害堆抗性，但要让抗性一路堆到10层物理或10层能量，打电脑的时候看着容易，玩家用还真不简单，因为运气最好也要防御10下，而且电脑会交替使用两类攻击，运气差的话一场比赛都堆不满。</p>
-<p>官方在2周年纪念前夕放出一张海报，致敬变形金刚86大电影，站在C位的通天晓雄风无限，大家以为他就要崛起了。让人大跌眼镜的是，最后他居然没有进入官方的8.0调整名单…</p>
+<p><del>由于很大一部分能力在防御侧，玩家要加以利用，最稳妥的是吃防御伤害堆抗性，但要让抗性一路堆到10层物理或10层能量，打电脑的时候看着容易，玩家用还真不简单，因为运气最好也要防御10下，而且电脑会交替使用两类攻击，运气差的话一场比赛都堆不满。</del></p>
+<p>官方在2周年纪念前夕放出一张海报，致敬变形金刚86大电影，站在C位的通天晓雄风无限，大家以为他就要崛起了。让人大跌眼镜的是，最后他居然没有进入官方的8.0调整名单…直到2019年11月，通天晓才得到了真正意义上的加强，虽然暂时还无法撼动战威战擎的领导地位，但是在和其他几个战术系的竞争中已经明显高出一个身位。</p>
+<h5 id="年10月31日调整">2019年10月31日调整</h5>
+<ul>
+<li>重击有55%的概率施加燃烧，燃烧的强度不俗（6秒80%攻击，强过钢锁和铁皮的重击），S2的导弹也有概率燃烧。燃烧可叠加。</li>
+<li>S1打击没有护甲的敌人也可以施加一层护甲，有护甲敌人依然是有几层就破几层。</li>
+<li>轻攻击结束连击加一层物理抗性，丢失一层能量抗性，中攻击则相反。重要的是，如果对面的抗性为零，依然会增加，所以可以通过连击来主动积攒抗性。</li>
+<li>招牌的数值提升不少，让通天晓的战力值大大上升。</li>
+</ul>
 <h4 id="推荐打法-2">推荐打法</h4>
 <h5 id="短战斗-2">短战斗</h5>
-<p>通天晓的重击虽然没有什么附加，但速度较快，可使用放风筝打法牵制，围绕S1和S2来打输出。</p>
+<p>通天晓的重击<del>虽然没有什么附加</del>燃烧概率和效果均为上乘，且行动速度较快，可使用放风筝打法牵制，再围绕S1的破甲来结束战斗。</p>
 <h5 id="长战斗-2">长战斗</h5>
-<p>开始战斗后找机会靠主动防御来堆抗性，堆10层物理抗性比较稳，例如五连击成功不逃跑，而是站防让对方打几下。10层能量抗性很难——你远距离站防，电脑是不会狂开枪的。</p>
-<p>有抗性之后围绕S2打输出，注意面对有护甲的对手，要等护甲出来再放特殊技比较划算，尤其是猩猩。</p>
+<p><del>开始战斗后找机会靠主动防御来堆抗性，堆10层物理抗性比较稳，例如五连击成功不逃跑，而是站防让对方打几下。10层能量抗性很难——你远距离站防，电脑是不会狂开枪的。</del> 首要任务是堆到10层抗性，因为通天晓在不被驱散和偷走的情况下，抗性总和最大为10，有了10层后对伤害的控制达到最优，S2也得到很大加强。但由于抗性在被打时容易切换，所以一定要有明确的目标： 1. 堆物理：轻攻击结束连击，并且适当地进行一些近战防御（例如五连后原地防御）。这适用于对付那些近战很疼的对手。 2. 堆能量：中等攻击结束连击并适当防御一些远程小枪，这种方式更符合玩家的操作习惯（因为大部分玩家都是采用MLLLM和LLLMM来做五连的），防小枪也更安全。</p>
+<p>有抗性之后围绕S2打输出。<del>注意面对有护甲的对手，要等护甲出来再放特殊技比较划算，尤其是猩猩。</del>S2是一锤一炮，相对来说后面的一炮伤害大，所以10层能量抗性放S2是最划算的。不过虽然S2很爽，但带着10层能量抗性吃一套残血大师的5连依然是很疼。所以在实战中还是要根据对手的情况来调整。</p>
 <p>面对汽车大师这样的角色，注意用小枪点掉他的攻击加成，防止瞬间血崩式的翻盘。</p>
 <h4 id="基地防守-2">基地防守</h4>
 <p>由于错过8.0的抢救名单，亚洲舞王最大的作用依然是基地防守：EMI、过滤器、流血、领袖模块都是通天晓合适的选择。</p>
@@ -460,13 +469,20 @@
 <h5 id="招牌-9">招牌</h5>
 <p>根据对方的能量提升近战的伤害，属于锦上添花吃招牌的功能。面对高觉醒的碾碎器被他施加降暴后千万小心，防他的特殊技和中招一样疼。</p>
 <h5 id="协同-9">协同</h5>
-<p>碾碎器的协同一般，无非是跟路障配合时的第一发重击打晕可以考虑。</p>
+<p>碾碎器的协同一般，无非是跟路障配合时的第一发重击能锁气。</p>
 <h5 id="短板-9">短板</h5>
 <p>碾碎器的短板在于只有标准式的输出，进攻没有什么别的花样。三招只有一招实用，虽然S2可以打出爆炸式的伤害，并且会随着招牌越来越大，但是没有附加伤害和附加效果，对付护盾和模块会很吃力。另外作为一个输出主要看近战的选手，配的远程重击实在鸡肋。官方已预告8.0中碾碎器会得到加强。</p>
 <h5 id="调整-3">8.0调整</h5>
 <p>碾碎器只得到了一点微调：S3的导弹如果暴击，能施加燃烧……</p>
+<h5 id="年10月3日调整">2019年10月3日调整</h5>
+<ul>
+<li>招牌的伤害提高</li>
+<li>S1：35%的概率锁6秒S2，75%的概率锁6秒S3</li>
+<li>S2：50%的概率锁6秒S3</li>
+<li>S3：100%的概率锁10秒S2和S3。并施加一层永久降暴16%（可以叠加三层）</li>
+</ul>
 <h4 id="推荐打法-9">推荐打法</h4>
-<p>无论是短战斗还是长战斗，碾碎器基本没有什么特别的打法，就是围绕s2打输出。虽然重击和他的打法不是特别匹配，但是因为远程重击命中后离对手不远，所以在短战斗也可以搏一搏压起身。</p>
+<p>无论是短战斗还是长战斗，碾碎器基本没有什么特别的打法，就是围绕s2打输出。虽然重击和他的打法不是特别匹配，但是因为远程重击命中后离对手不远，所以在短战斗也可以搏一搏压起身。 经过调整加入了锁特殊技后，碾碎器在战斗中可以更加放心地使用S2和招牌来利用对手的能量打伤害，只是要记住一旦打红，那即便锁定了S技也得骗招。跟路障搭配的时候，每场第一发重击可以锁能量，要善加利用。S3由于可以施加永久降暴，相应地可以提升碾碎器屈防时的伤害，长战斗中可以考虑先来一次S3。</p>
 <h4 id="基地防守-9">基地防守</h4>
 <p>碾碎器凭借皮厚血厚带着流血模块领衔了基地防守好些日子，野兽净化出来之后慢慢失去了优势。但无论如何，流血模块还是他的绝配。领袖模块也会让他更抗揍。</p>
 <!--/Note-->
@@ -822,7 +838,7 @@
 <p>长战斗时选择毒液给自己，初期坚决不放重击，围绕S1和S3打输出并控制对方远程攻击。等到第一个S3集满，毒液达到3层的时候可以有一种变化，争取先骗掉对方特殊技之后用重击施加三层逆火后用远程牵制来拖延时间，这时对方没有大招，只能眼巴巴看着逆火过期，就算牵制不当给对方得到了气槽，也可以放出S3，用漫长的动画时间进一步拖延时间。我们可以比较一下：带着五阶蝎子三层逆火放大招会造成420%的伤害，不放大招会有500%的震击，所以从蝎子的角度讲当然是拖延时间比较好，但就算放了，逆火伤害也很可观。</p>
 <p>如果对方有防震击手段（觉醒猩猩，反冲等），就不需要上述变化，一直把毒液堆到10层，用200%的攻击加成打架，战斗时间也会大大缩短。</p>
 <h4 id="基地防守-21">基地防守</h4>
-<p>科技控制台是觉醒蝎子的绝配，如果没有，可以考虑三个加气模块（机器人资源、S1000、S2000），提高蝎子毒液的数量</p>
+<p>科技控制台是觉醒蝎子的绝配，如果没有，可以考虑三个加气模块（机器人资源、S1000、S2000），提高蝎子毒液的数量。</p>
 <!--/Note-->
 <h2 id="侦查系">侦查系</h2>
 <p>侦查系人才济济，是目前人数最多的类别。虽然各具特色，但高攻击，高暴击和高控场让侦查系机器人不但对科技形成了有效克制，优秀的规避能力在面对其他类别也毫不畏惧。除了碎骨魔。</p>
@@ -917,11 +933,11 @@
 <h5 id="调整-6">8.0调整</h5>
 <p>基础暴击率+3.6%，基础暴击伤害+10%，S2的导弹100%施加燃烧。</p>
 <h5 id="年8月调整">2019年8月调整</h5>
-<p>在游戏进入通用人物币阶段后，老牌的角色一个个被卡邦拿来当月度人物卖，然而不但战擎、铁皮已经上架，连野牛、天火等都闪亮登场时，横炮作为第一批人物还没有出现。在2019年8月正式上架前，官方再次对横炮作出平衡性调整：</p>
+<p>在游戏进入通用人物币阶段后，老牌的角色一个个被卡邦拿来当月度人物卖，然而不但战擎、铁皮已经上架，连野牛、天火等都闪亮登场时，横炮作为第一批人物还没有出现。在2019年8月1日正式上架前，官方再次对横炮作出平衡性调整：</p>
 <ul>
 <li>被击倒只丢失5层暴击（之前是全丟）</li>
 <li>带着10层暴击打中S2，则会在一段时间内获得50%的暴击伤害加成</li>
-<li>重击命中净化身上的所有震击并刷新所有暴击伤害加成，侦查系拥有净化的不多，横炮这一调整让他在面对觉醒犀牛或者震击格挡时优势巨大</li>
+<li>重击命中净化身上的所有震击并刷新所有暴击伤害加成，侦查系拥有净化的不多，横炮这一调整让他在面对觉醒犀牛或者震击格挡时有一定的优势，然而官方做事做一半，让横炮只有在重击命中时才净化，比起幻影、野兽组出重击即净化的特点，横炮净化的难度大了很多，这个能力并没有太稳定的价值</li>
 <li>招牌削弱，满觉醒只给50%的最大能量。虽然看上去是削弱，但由于高觉醒的横炮往往在电脑手上（配机器人资源、科技控制台），这一调整反倒降低了电脑横炮开局不久就出S3的机会，更像是有利玩家的改动。</li>
 </ul>
 <h4 id="推荐打法-24">推荐打法</h4>
@@ -1144,6 +1160,11 @@
 <p>幻影的协同相当多：搭配横炮、战术黄或黄豹时躲闪后的下一击加攻，搭配阿尔茜或探长时提升远程暴击率（幻影自己其实受益不大），搭配热破互相加暴击伤害；搭配声波和录音机再加10%的护盾强度，几乎完全免伤；同时还收到警车给予的重击堆加攻的协同，配合S3之后的攻击加成更加如虎添翼。</p>
 <h5 id="短板-31">短板</h5>
 <p>幻影除了基础输出不够和面对非爆破系时身板较脆外，很大问题在于“技多压身”：多变的打法（S1控气，S2暴力输出，S3布局长线）需要更多的思考，也更容易被打断战术部署，另外协同多但管用的少，这些都让幻影逐渐在科技系的竞争中输给救护车犀牛和千斤顶。</p>
+<h5 id="年8月29调整">2019年8月29调整</h5>
+<ul>
+<li>被击中时切换到能量模式的概率调低，这让幻影在使用三个S技后的加成状态要更稳定，吃到特殊技的时候则100%回到能量模式</li>
+<li>S1和S2的倒计时被改为在最后一击击中时才开始，S3的倒计时在动画完全结束后才开始，不再因为S技的动画浪费宝贵的招牌时间</li>
+</ul>
 <h4 id="推荐打法-31">推荐打法</h4>
 <p>未觉醒到10级的幻影除非真没人可用，否则建议雪藏。</p>
 <h5 id="短战斗-28">短战斗</h5>
@@ -1253,7 +1274,7 @@
 <h3 id="录音机">录音机</h3>
 <!--Note-->
 <h4 id="特点分析-35">特点分析</h4>
-<p>曾经有人扒过数据的数据，预测过一长串即将推出的机器人，并且非常准，但是没有录音机。官方非常意外地在传奇2.0中加入了录音机，而且由于传奇2.0在前，所以很多挑战传奇的人都被录音机坑得很惨。</p>
+<p>曾经有人扒过数据的数据，预测过一长串即将推出的机器人，并且非常准，但是没有录音机。官方非常意外地在传奇2.0中加入了录音机，而且由于传奇2.0在前，录音机的正式发布在后，所以很多挑战传奇的人都因为不了解录音机，被坑得很惨。</p>
 <h5 id="能力-35">能力</h5>
 <ul>
 <li>录音机的一个核心能力就是小枪能给对方施加干扰，让对方远程攻击减速减伤，并且打中、屈防甚至打中判定框全部生效。基本上远程相持一段时间后，录音机就废掉了对方的小枪能力，因为干扰的不仅仅是射速，对方出枪和收枪的动作也会迟缓，施加了2~3层干扰后，录音机的小枪会很快在对枪中压过半场击中对方，让录音机侧闪后出枪更容易命中 。</li>
@@ -1265,8 +1286,7 @@
 <li>S3施加长时间减攻，默认减10%，放大充能越多，额外减得越多。</li>
 </ul>
 <h5 id="招牌-35">招牌</h5>
-<p>这是一个性能较难多的招牌，但是因为中文翻译的问题，很多人不太理解说的是什么。</p>
-<p>首先，招牌让有盾的录音机面对远程基础能量攻击可以没有受创硬直，尤其是10层充能时就变成了1.2秒的盾，这让录音机额外有了类似野牛那种“充霸体”的能力（注意，对漂移/雷震/反冲的物理攻击无效）。</p>
+<p>这是一个性能较多的招牌，但是因为中文翻译的问题，很多人不太理解说的是什么：首先，招牌让有盾的录音机面对远程基础能量攻击可以没有受创硬直，尤其是10层充能时就变成了1.2秒的盾，这让录音机额外有了类似野牛那种“充霸体”的能力（注意，对漂移/雷震/反冲的物理攻击无效）。</p>
 <p>其次，减20%的能量伤害，并且有40%的概率把打在身上的能量伤害用来回血。如果是特殊攻击则双倍回血。</p>
 <p>不过，解释了这么多，这个招牌依然显得略鸡肋。首先那“霸体”能力没有光圈的指示，不能硬扛近战，用起来肯定不放心。其次回血概率恒定为40%，我何必为了这点概率消极防守，再者说跟录音机对枪的对手能有几枪打中录音机？</p>
 <h5 id="协同-35">协同</h5>
