更新人物解析，加入招牌价值EXCEL

--- a/tftf-chars.html
+++ b/tftf-chars.html
@@ -884,11 +884,11 @@
 <h3 id="风刃">风刃</h3>
 <!--Note-->
 <h4 id="特点分析-23">特点分析</h4>
-<p>风刃是由迷友投票创建的IDW漫画原创角色，之后迅速进入了各种动画作品。大人气的她也作为百炼为战首批机器人发布。高暴击高流血的剑客让她仿佛混进侦查系的战士。</p>
+<p>风刃是由迷友投票创建的IDW漫画原创角色，之后迅速进入了各种动画作品。大人气的她也作为百炼为战首批机器人发布。高暴击高流血的剑客形象让她仿佛混进侦查系的战士。</p>
 <h5 id="能力-23">能力</h5>
 <ul>
 <li>剑刃攻击加25%的暴击率，让风刃出流血的机会很高。</li>
-<li>近战暴击53%~60%概率流血（重击和脚踢其实也是会出流血的），4秒，30-68%的攻。</li>
+<li>近战暴击最高60%概率流血（重击和脚踢其实也是会出流血的），4秒，30~68%的攻击伤害。</li>
 <li>连砍四层流血会砍晕对手，岂不美哉。技术好的玩家懂得在平砍过程中盯着流血层数，到三层的时候做好准备，一旦砍晕，马上后退点两枪再上去砍，一方面加大输出，另一方面远程小枪击中流血的对手也会35%的概率晕。</li>
 <li>重击可以穿过远程小枪和远程重击（除了探长的精准弹）。在游戏早期重击距离超长的时候，风刃“点两枪+重击”的打法十分无赖，后来缩短之后重击回归平淡，但还是可以在被声波/蝎子重击压墙角的时候脱身，或者爆威出霸体乱放炮的时候硬怼。</li>
 <li>S1暴击也会流血，但主要的性能是震击和阻止加气。震击前和震击中发动的加气都会被阻断，例如声波的加气、机器人资源模块的加气。但是不能阻断能量功率的加成（例如热破的招牌）。</li>
@@ -975,7 +975,7 @@
 <ul>
 <li>被击倒只丢失5层暴击（之前是全丟）</li>
 <li>带着10层暴击打中S2，则会在一段时间内获得50%的暴击伤害加成</li>
-<li>重击命中净化身上的所有震击并刷新所有暴击伤害加成，侦查系拥有净化的不多，横炮这一调整让他在面对觉醒犀牛或者震击格挡时有一定的优势，然而官方做事做一半，让横炮只有在重击命中时才净化，比起幻影、野兽组出重击即净化的特点，横炮净化的难度大了很多，这个能力并没有太稳定的价值</li>
+<li>重击净化身上的所有震击并刷新所有暴击伤害加成，侦查系拥有净化的不多，横炮这一调整让他在面对觉醒犀牛或者震击格挡时有一定的优势。起先官方做事做一半，让横炮只有在重击命中时才净化，比起幻影、野兽组出重击即净化的特点，横炮净化的难度大了很多，之后官方听取了玩家的意见，改为发动重击就净化。</li>
 <li>招牌削弱，满觉醒只给50%的最大能量。虽然看上去是削弱，但由于高觉醒的横炮往往在电脑手上（配机器人资源、科技控制台），这一调整反倒降低了电脑横炮开局不久就出S3的机会，更像是有利玩家的改动。</li>
 </ul>
 <h4 id="推荐打法-25">推荐打法</h4>
