--- a/rok3.html
+++ b/rok3.html
@@ -22,13 +22,14 @@
 <h1 class="title">塞伯坦传奇3云攻略（无震天尊）</h1>
 <p class="author">公理天城翻译官</p>
 </header>
+<hr />
 <p>“震天尊出了，赶快去买。”</p>
 <p>“我要打了传奇3才能买震天尊！”</p>
 <p>“那你去打传奇3啊！”</p>
 <p>“没有震天尊我怎么打得了传奇3？！”</p>
 <p>——这酷似《第二十二条军规》的情节，就是百炼为战最新的高难度挑战模式给玩家带来的困惑。这个只能带两个人出战，6条线有类别限制，却要面对6个100多万血、100觉醒的敌人的模式，让震天尊这样单兵成团的存在成了最佳解，而本文就是要基于“没有震天尊怎么打传奇3”这个话题来做一番云测。</p>
 <p>本人用现有的机器人去测试了几条线路的看门人，找了找感觉。以下“攻略”并非打通传奇3的心得，更多是基于对角色和敌人的了解与分析得来，仅供参考。祝大家都早日拿到震天尊。</p>
-<p><img src="map.png" /></p>
+<p><img src="map.png" style="width:80.0%" /></p>
 <h2 id="斗士门易">斗士门（易）</h2>
 <p>敌人：通天晓，碾碎器，反冲，千斤顶，斗擎。惊天雷（Boss）</p>
 <p>推荐：战威，汽车大师；猩猩队长，黄蜂勇士</p>
@@ -41,7 +42,7 @@
 <h2 id="战士门最难">战士门（最难）</h2>
 <p>敌人：猩猩队长、巨蝎勇士、爆威、录音机、汽车大师。惊天雷（Boss）</p>
 <p>推荐：黄豹，蝎子。</p>
-<p>蝎子、爆威和录音机按比例回血极其恐怖，所以黄豹基本上是这三个敌人的通用解。用来开门的战士显然首先长战斗之王蝎子。</p>
+<p>蝎子、爆威和录音机按比例回血极其恐怖，所以黄豹基本上是这三个敌人的通用解。用来开门的战士显然首选长战斗之王蝎子。</p>
 <p>这条线的难度相当高，首先前四个都可能会回血</p>
 <ul>
 <li>猩猩的回血可能没有那么频繁，并且只要自己注意好（黄豹多用S2，见到猩猩放重击后等护甲回来后再打）还是可控的。</li>
