--- a/FOC.html
+++ b/FOC.html
@@ -1,9 +1,15 @@
 <html>
 
+<head>
+    <title>腐朽的堡垒（Fortress of Corruption）</title>
+</head>
+<h1>地图</h1>
+点击各个节点人物，查看模块与对策。
+
 <body>
     <script src="https://cdn.jsdelivr.net/npm/mermaid@8.4.0/dist/mermaid.min.js"></script>
     <script>mermaid.initialize({ startOnLoad: true });</script>
-    腐朽的堡垒（Fortress of Corruption）
+
     <div class="mermaid">
         graph BT
         %% 左路
@@ -89,8 +95,56 @@
         R18 --> RBoss4(震荡波)
         R28 --> RBoss4
         RBoss4 --> BigBoss(亡灵天尊)
-
         end
+
+        click L11 "#L11(恐龙勇士)"
+        click L21 "#L21(警车)"
+        click R11 "#R11(阿尔茜)"
+        click R21 "#R21(风刃)"
+        click L12 "#L12(漂移)"
+        click L22 "#L22(搅拌者)"
+        click LBoss1 "#LBoss1(犀牛)"
+        click R12 "#R12(横炮)"
+        click R22 "#R22(录音机)"
+        click RBoss1 "#RBoss1(爆威)"
+        click LGoon1 "#LGoon1(惊天雷)"
+        click RGoon1 "#RGoon1(爵士)"
+        click L13 "#L13(斗擎)"
+        click L14 "#L14(钢锁)"
+        click L23 "#L23(天火)"
+        click L24 "#L24(野牛)"
+        click LBoss2 "#LBoss2(碎骨魔)"
+        click MidBoss "#MidBoss(战威)"
+        click R13 "#R13(汽车大师)"
+        click R14 "#R14(幻影)"
+        click R23 "#R23(热破)"
+        click R24 "#R24(红蜘蛛)"
+        click RBoss2 "#RBoss2(雷震)"
+        click L15 "#L15(通天晓)"
+        click L25 "#L25(声波)"
+        click R25 "#R25(天火)"
+        click R15 "#R15(黄蜂勇士)"
+        click L16 "#L16(碾碎器)"
+        click L26 "#L26(斗擎)"
+        click LBoss3 "#LBoss3(猩猩队长)"
+        click R26 "#R26(路障)"
+        click R16 "#R16(千斤顶)"
+        click RBoss3 "#RBoss3(黄豹)"
+        click LGoon2 "#LGoon2(狂飙)"
+        click RGoon2 "#RGoon2(惊破天)"
+        click L17 "#L17(钢锁)"
+        click L18 "#L18(喷气机)"
+        click L27 "#L27(蝎子)"
+        click L28 "#L28(救护车)"
+        click LBoss4 "#LBoss4(暗黑擎天柱)"
+        click BigBoss "#BigBoss(亡灵天尊)"
+        click R17 "#R17(战擎)"
+        click R18 "#R18(小黄蜂)"
+        click R27 "#R27(反冲)"
+        click R28 "#R28(铁皮)"
+        click RBoss4 "#RBoss4(震荡波)"
+        click BigBoss "#BigBoss(亡灵天尊)"
+
         classDef brawler fill:#956FE7,color:#FFF,stroke:#333,stroke-width:2px;
         classDef warrior fill:#EE7976,stroke:#333,stroke-width:2px;
         classDef scout fill:#a3e043,stroke:#333,stroke-width:2px;
@@ -121,6 +175,181 @@
 
         mermaid.initialize(config);
     </script>
+
+    <h1 id="地图分析">地图分析</h1>
+    <p>这一次盟战地图更新后，所有同盟都只有一张地图可以选。这张图依然采用左2+右2的方式，最少四个人一组即可探索，但敌人数量增加了很多（从原来的35人加到了46人），分四厅打完。虽然体力改为45分钟一点，但每天需要上线战斗的次数还是增加了。
+    </p>
+    <p>整体来说，这张图对低/中难度的同盟来说相对友好，因为战力差比较小的时候一局的战斗时间短，有些变态模块的效果不会特别明显。但是高难度的战斗就极为险恶了。</p>
+    <h2>推荐阵容</h2>
+    <ul>
+        <li>铁救擎：由于去掉了很多“一定时间不打中近战就回血/加气”的模块，这张地图不强求速攻。曾经很流行的铁皮救护车战擎的回血组合又逐渐有了市场。</li>
+        <li>动物园：左路对净化的要求很高，右路也有不少DOT模块，加上黄豹的修复格挡能力、蝎子的控远程能力，猩猩的克流血/克反射能力，让动物园有很大的发挥空间。建议一个团队至少有两支动物园小队，并且必带黄豹。</li>
+        <li>霸天虎核心队：震荡波和战威在这个图中依然有很大的优势，外加惊破天或者另带一人（录音机、战擎、警车）都是不错的选择。</li>
+        <li>震天尊：有五星震天尊怎么可能不用，图中只要是可以磨时间的，震天尊都能拿下。其他搭配随意。</li>
+    </ul>
+
+    <h2>一厅</h2>
+    <p>一厅左路的难度不高，主要是右路会有很大的风险。</p>
+    <h3 id="L11(恐龙勇士)">恐龙勇士</h3>
+    <p>模块：暴击伤害，暴击几率</p>
+
+    <p>除了防御的反伤，恐龙本身没有太多可怕的地方，只要做好牵制即可。远程类角色如铁皮、黄蜂勇士、震荡波都可使用。</p>
+
+    <h3 id="L12(漂移)">漂移</h3>
+    <p>模块：暴击伤害，暴击几率</p>
+    <p>基本上同恐龙，只是被漂移暴击之后流血会比较凶，建议用有净化或克制流血能力的角色。</p>
+
+    <h3 id="L21(警车)">警车</h3>
+    <p>模块：特殊攻击计时（一定时间内大幅度提升特殊技伤害，有冷却时间）</p>
+    <p>警车的S2伤害很大，加上自身招牌的加气，不慎在S技有加成的时候防一下S2也是要命的。建议选用同样控气能力强的警车。</p>
+    <h3 id="L22(搅拌者)">搅拌者</h3>
+    <p>模块：特殊攻击计时</p>
+    <p>基本上同警车，而且在难度高了之后，搅拌者自身的S技加成还会叠加上去，所以一定要把对方的气控好，S技骗好。震荡波很适合对付他。</p>
+    <h3 id="LBoss1(犀牛)">犀牛</h3>
+    <p>模块：强化流血</p>
+    <p>犀牛这个小Boss不如之前两个盟战图里面配的模块变态。主要烦的还是他自身的招牌爆盾。小黄蜂是首选。能净化震击的、能近战无暴击的角色都能用。</p>
+    <h3 id="R11(阿尔茜)">阿尔茜</h3>
+    <p>模块：远程规避，规避能量获取</p>
+    <p>阿尔茜本身已经有概率规避，再加上模块，让她一旦规避后的能量涨得飞快。尽量使用近身战斗，如斗擎，汽车大师。</p>
+    <h3 id="R12(横炮)">横炮</h3>
+    <p>模块：远程规避，规避能量获取</p>
+    <p>横炮自身有定时出现的近战规避，再加上模块，就没有阿尔茜那么好对付了。如果没有漂移热破这种能有效控制他规避能力的话，就一定要在近战时小心他出规避。远程点枪也要克制一些，不然他的能量也会嗖嗖地涨上来，一旦给他S2的机会，就有很长时间不能上去打了。
+    </p>
+    <h3 id="R21(风刃)">风刃</h3>
+    <p>模块：远程伤害，远程能量燃烧</p>
+    <p>风刃出现在与上一张地图完全相同的位置。模块相对更简单。</p>
+    <h3 id="R22(录音机)">录音机</h3>
+    <p>模块：远程伤害，远程能量燃烧</p>
+    <p>录音机射速提升后很难不被他的子弹减速，建议用警车连续S1压制来破。</p>
+    <h3 id="RBoss1(爆威)">爆威</h3>
+    <p>模块：骇客化瞄准器</p>
+    <p>爆威本身并不难，但是这个模块依然会增加很大的不确定性，蝎子用S1可以减少被高速子弹擦伤的机率。</p>
+    <h2>二厅</h2>
+    <p>二厅左路有四个斗士加碎骨魔，主要考验净化能力。右路难度很大，敌人规避和近战伤害容易带来很大的损耗。</p>
+    <h3 id="LGoon1(惊天雷)">惊天雷</h3>
+    <p>模块：近程计时</p>
+    <p>惊天雷的AI总的来说不算太难，但是近程计时模块加的伤害非常高，一定要小心。战威的偷Buff有奇效，顺利偷到近程Buff的话可以迅速结束战斗。</p>
+
+    <h3 id="L13(斗擎)">斗擎</h3>
+    <p>模块：近战流血</p>
+    <p>斗擎没有什么难打的，带着有净化能力的角色会稳妥一些。</p>
+    <h3 id="L14(钢锁)">钢锁</h3>
+    <p>模块：近战流血</p>
+    <p>同斗擎。</p>
+    <h3 id="L23(天火)">天火</h3>
+    <p>模块：震击格挡</p>
+    <p>天火的格挡能力超群，建议在牵制中等他放三枪的空档去打。带净化的黄豹是首选。</p>
+    <h3 id="L24(野牛)">野牛</h3>
+    <p>模块：震击格挡</p>
+    <p>野牛没有了上一地图的投射吸收，相对是很简单的。战威战擎都可破。</p>
+
+    <h3 id="LBoss2(碎骨魔)">碎骨魔</h3>
+    <p>模块：蹒跚</p>
+    <p>碎骨魔可怕的不是模块，而是他的反流血。和高难度的碎骨魔战斗，斗擎和钢锁或者要重击净化的动物园都很难控制自己的伤害。完全不暴击的惊天雷和铁皮爆威才会稳定一些。</p>
+    <h3 id="RGoon1(爵士)">爵士</h3>
+    <p>模块：重击眩晕</p>
+    <p>如果爵士的重击都能打中你……那是活该被眩晕了。这应该是全图里面最轻松的一位了。</p>
+    <h3 id="R13(汽车大师)">汽车大师</h3>
+    <p>模块：近战伤害，近战能量燃烧</p>
+    <p>简单说：不要被他打到。当然这也不是那么容易就能做到的，毕竟大师有霸体。所以当然是——带狂飙啊！或者战威偷Buff。</p>
+
+    <h3 id="R14(幻影)">幻影</h3>
+    <p>模块：近战伤害，近战能量燃烧</p>
+    <p>幻影不强在近战，但是他本身S1之后的小枪能力可一点都没耽误。控气是关键。</p>
+    <h3 id="R23(热破)">热破</h3>
+    <p>模块：近战回避，远程回避</p>
+    <p>看到这种“油盐不进”的模块配置我真的很无语。这样的规避配上热破本来就很变态的招牌，应该让他成为了图里面最难对付的敌人之一，如果没有十分有效的规避克制能力，那只能开着镇静精通非常小心地去打。如果你有震天尊，那就慢慢攒气放大招吧。
+    </p>
+
+    <h3 id="R24(红蜘蛛)">红蜘蛛</h3>
+    <p>模块：近战回避，远程回避</p>
+    <p>同热破。但相对来说红蜘蛛的气来得慢，会好对付一些。</p>
+    <h3 id="RBoss2(雷震)">雷震</h3>
+    <p>模块：暴击几率</p>
+    <p>雷震还是那个雷震，护甲把战斗拖长，突然暴击一刀要你命。破甲能力很关键。</p>
+    <h3 id="MidBoss(战威)">战威</h3>
+    <p>模块：力量流计时</p>
+    <p>作为中Boss的战威其实没有上一张地图中那么变态，无非是盯着紫色的倒计时图标，等能量功率加成过去后再打即可。如果有反冲可以一个重击解决（前提是重击打得中……）。</p>
+
+    <h2>三厅</h2>
+    <p>三厅左路依然有大量硬梆梆的斗士要打，动物园一般不会带恐龙勇士来，所以要保证这边有战擎战威。右路相对会容易一些。</p>
+    <h3 id="L15(通天晓)">通天晓</h3>
+    <p>模块：获得护甲</p>
+    <p>90%的护甲加成外加通天晓自身的皮糙肉厚，低难度也许还能用震荡波的DOT伤害来通过，高难度如果没有破甲能力最好不要轻易尝试。推荐战威、战擎。而且要注意的是这90%的护甲即便被战威偷掉，过一段时间也会恢复，所以实际的战斗时间会相当长。
+    </p>
+    <h3 id="L16(碾碎器)">碾碎器</h3>
+    <p>模块：获得护甲</p>
+    <p>同通天晓。</p>
+    <h3 id="L25(声波)">声波</h3>
+    <p>模块：力量启动，力量流</p>
+    <p>力量启动是开局即一格气，力量流是全场提升100%的能量功率。这两个模块放在声波身上的直接结果就是——他的护盾几乎全程护体。虽然声波的重击比较好骗，但是因为小枪和远程重击甚至远程类的S技都十分危险，所以推荐近战凶猛的角色如黄豹，或者猩猩这种重击不会被反射的角色来打。
+    </p>
+
+    <h3 id="L26(斗擎)">斗擎</h3>
+    <p>模块：力量启动，力量流</p>
+    <p>斗擎比声波要好打很多，加强骗招，不要被一发S1秒掉。</p>
+    <h3 id="LBoss3(猩猩队长)">猩猩队长</h3>
+    <p>模块：反射远程</p>
+    <p>由于反射远程模块被偷掉就不会回来，战威是最适合对付猩猩的，主要就是融合的时机，要让猩猩前冲撞上重击，或者S技的破绽后放重击。</p>
+
+    <h3 id="R15(黄蜂勇士)">黄蜂勇士</h3>
+    <p>模块：重击格挡，S2强化（不可防御）</p>
+    <p>目前重击的命中率很低，所以重击格挡并不会形成很大的麻烦。黄蜂勇士的S2也不算难躲。尽量用震荡波这样在远程中不会吃亏并且留着S2防止他复活中的回血。</p>
+    <h3 id="R16(千斤顶)">千斤顶</h3>
+    <p>模块：重击格挡，S2强化（不可防御）</p>
+    <p>千斤顶的S2出手有点突然，要多加预判，或者控气，或者带蝎子。</p>
+    <h3 id="R25(天火)">天火</h3>
+    <p>模块：远程震击</p>
+    <p>不吃远程即可，比另一个天火要简单些，主要烦的还是他的回血。</p>
+    <h3 id="R26(路障)">路障</h3>
+    <p>模块：远程震击</p>
+    <p>不吃远程，少击倒路障。</p>
+    <h3 id="RBoss3(黄豹)">黄豹</h3>
+    <p>模块：改进型辅助瞄准器</p>
+    <p>所有普攻破防。重点还是保证自身的安全，黄豹连续猛扑过来时，侧闪反击要注意多闪几下。</p>
+    <h2>四厅</h2>
+    左路的战斗很耗时间，右路的战斗很凶险，走到这里已经是损兵折将，但坚持过去就没问题了，因为左右护法和Boss没有上一张地图那么难。
+    <h3 id="LGoon2(狂飙)">狂飙</h3>
+    <p>模块：能量驾驭</p>
+    <p>狂飙得到一格气的时候反弹已经很烦了，配合能量驾驭进一步提高他的优势，控气能力优秀的震荡波比较适合。</p>
+    <h3 id="L17(钢锁)">钢锁</h3>
+    <p>模块：循环抵抗</p>
+    <p>这个模块就是拉长战斗时间的，钢锁的AI倒没什么，主要是血厚。推荐战威</p>
+    <h3 id="L18(喷气机)">喷气机</h3>
+    <p>模块：循环抵抗</p>
+    <p>喷气机与钢锁的区别无非是皮厚。战威就算被类别克制，依然推荐。</p>
+    <h3 id="L27(蝎子)">蝎子</h3>
+    <p>模块：修复计时</p>
+    <p>蝎子回血本来已经很强了，配上定时回血10%，如果战力差太大，永远打不死。图中最难的敌人之一，虽然老威可以偷到模块的回血，但不能偷到蝎子自身的回血，所以不确定性依然很高，黄豹是最优解。</p>
+    <h3 id="L28(救护车)">救护车</h3>
+    <p>模块：修复计时</p>
+    <p>相对蝎子来说，救护车的回血还是比较可控的，半血后会频繁尝试重击，只要及时打断，就不会触发自我诊断。</p>
+    <h3 id="LBoss4(暗黑擎天柱)">暗黑擎天柱</h3>
+    <p>模块：最后防线修复</p>
+    <p>前面已经有两个回血的了，这个左护法又是大量回血，如果黄豹和震荡波能一路扛过来，当然还是上他们，用修复格挡，否则就做好长时间战斗的准备，但一定要一次打死，不然下回继续……</p>
+    <h3 id="RGoon2(惊破天)">惊破天</h3>
+    <p>模块：防御能量增加</p>
+    <p>这个惊破天已经没有了上一张地图中变态的物理抗性和远程加成，注意不要给他太多机会防御，正常打即可。</p>
+    <h3 id="R17(战擎)">战擎</h3>
+    <p>模块：近战规避，规避能量获取</p>
+    <p>战擎的AI比较傻，但这样的搭配依然要注意谨防被坑，远程型的角色比较适合，毕竟要留着血去打后面的小黄蜂。</p>
+    <h3 id="R18(小黄蜂)">小黄蜂</h3>
+    <p>模块：近战规避，规避能量获取</p>
+    <p>小黄蜂自己的规避和加气就非常烦人了，再加这两个模块之后成为图中最难对付的敌人之一。推荐远程的爆破系角色放风筝，但要很小心他的S1可以远远地穿透你的重击秒掉你。</p>
+    <h3 id="R27(反冲)">反冲</h3>
+    <p>模块：远程伤害，暴击几率</p>
+    <p>相对简单的敌人和模块配置，打这条路的同志要留着血打震荡波和亡灵天尊，因为左边那条路肯定损耗巨大。</p>
+    <h3 id="R28(铁皮)">铁皮</h3>
+    <p>模块：远程伤害，暴击几率</p>
+    <p>同反冲。</p>
+    <h3 id="RBoss4(震荡波)">震荡波</h3>
+    <p>模块：远程震击</p>
+    <p>相比上一图的震荡波也简单了一些，没有减益延时和能量增加集中。耐心点打即可</p>
+    <h3 id="BigBoss(亡灵天尊)">亡灵天尊</h3>
+    <p>模块：重击格挡，特殊攻击眩晕</p>
+    <p>亡灵天尊本身就很平庸，这两个模块也远没有上一图震天尊的模块难。这也是对大家一路辛苦走来的一种安慰吧。</p>
+
+
 
 </body>
 
