--- a/FOC.html
+++ b/FOC.html
@@ -1,6 +1,9 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>腐朽的堡垒（Fortress of Corruption）</title>
 </head>
 <h1>地图</h1>
