--- a/FOC.html
+++ b/FOC.html
@@ -331,7 +331,7 @@
     <p>狂飙得到一格气的时候反弹已经很烦了，配合能量驾驭进一步提高他的优势，控气能力优秀的震荡波比较适合。</p>
     <h3 id="L17(钢锁)">钢锁</h3>
     <p>模块：循环抵抗</p>
-    <p>这个模块就是拉长战斗时间的，钢锁的AI倒没什么，主要是血厚。推荐战威</p>
+    <p>这个模块就是拉长战斗时间的，钢锁的AI倒没什么，主要是血厚。推荐战威。</p>
     <h3 id="L18(喷气机)">喷气机</h3>
     <p>模块：循环抵抗</p>
     <p>喷气机与钢锁的区别无非是皮厚。战威就算被类别克制，依然推荐。</p>
@@ -361,7 +361,7 @@
     <p>同反冲。</p>
     <h3 id="RBoss4(震荡波)">震荡波</h3>
     <p>模块：远程震击</p>
-    <p>相比上一图的震荡波也简单了一些，没有减益延时和能量增加集中。耐心点打即可</p>
+    <p>相比上一图的震荡波也简单了一些，没有减益延时和能量增加集中。耐心点打即可。</p>
     <h3 id="BigBoss(亡灵天尊)">亡灵天尊</h3>
     <p>模块：重击格挡，特殊攻击眩晕</p>
     <p>亡灵天尊本身就很平庸，这两个模块也远没有上一图震天尊的模块难。这也是对大家一路辛苦走来的一种安慰吧。</p>
