--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li><a href="tftf-chars.html">全人物解析</a></li>
         <li><a href="tftf-radar-chart.html">全人物能力图谱</a></li>
         <li><a href="tftf-masteries.html">精通解析</a></li>
-        <li><a href="ROK3.html">塞伯坦传奇3（无震天尊）攻略</a></li>
+        <li><a href="rok3.html">塞伯坦传奇3（无震天尊）攻略</a></li>
         <li><a href="FOC.html">盟战新图（腐朽的堡垒）地图+解析</a></li>
         <li><a href="in_store_tomorrow.html">突袭商店明日商品</a></li>
         <li><a href="calculator_cn.html">锻造计算器</a></li>
