--- a/masterysetup.html
+++ b/masterysetup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
-    <title>腐朽的堡垒（Fortress of Corruption）</title>
+    <title>精通解析与推荐设置</title>
     <!-- <link rel="stylesheet" href="style.css" /> -->
 </head>
 <style>
@@ -22,41 +22,39 @@
 <body>
     <script src="https://cdn.jsdelivr.net/npm/mermaid@8.4.0/dist/mermaid.min.js"></script>
     <script>mermaid.initialize({ startOnLoad: true });</script>
-    <div style="position:absolute;margin-left:5%;margin-top: 20px;width:600px;height: 400px; background-color: aqua;">
-        <div class="mermaid" style="position:relative;float: left;width: 300px;">
+    <h1>攻击型精通</h1>
+    <div style="position:relative;margin-left:5%;margin-top: 20px;width:90%;height: 500px; background-color: aqua;">
+
+        <div class="mermaid" style="position:relative;float: left;width: 45%;">
             graph LR
             %%subgraph Basic
-            Damage((1)) --- Sequencer((2))
-            Sequencer --- Courage[3]
-            Courage --- Cpunch((4))
-            Sequencer --- Pierce[3]
-            Pierce --- CritR((1))
-            Pierce --- CritD((1))
-            Sequencer --- Sniper((1))
-            Sniper --- Guns((1))
+            Damage((伤害)) --- Sequencer((定序器))
+            Sequencer --- Courage[勇气]
+            Courage --- Cpunch((反击))
+            Sequencer --- Pierce[穿透护甲]
+            Pierce --- CritR((暴击几率))
+            Pierce --- CritD((暴击伤害))
+            Sequencer --- Sniper((狙击手))
+            Sniper --- Guns((枪手))
             %%end
         </div>
-        <div class="mermaid" style="position: relative; float:left;width: 205px;">
+        <div class="mermaid" style="position: relative; float:left;width: 25%;">
             graph LR
-            %%subgraph Advanced
-            Star[1] --- Glass[1]
-            Star --- Unfazed[1]
-            Glass --- DoubleEdge[1]
-            %%end
+            Star[追星者] --- Glass[玻璃大炮]
+            Star --- Unfazed[镇静]
+            Glass --- DoubleEdge[双刃剑]
         </div>
-        <div style="position: relative; float:left; width:90px; height: 140px;"></div>
-        <div class="mermaid" style="position: relative;float:left; width:100px">
+        <div style="position: relative; float:left; width:20%; height: 144px;"></div>
+        <div class="mermaid" style="position: relative;float:left; width:15%">
             graph LR
-            Stand[1]
-            Assassin[1]
+            Stand[同心协力]
+            Assassin[暗杀]
         </div>
-        <div class="mermaid" style="position: relative;float:left; width:200px">
+        <div class="mermaid" style="position: relative;float:left; width:20%">
             graph LR
-            %%subgraph Advanced
-            Star[1] --- Glass[1]
-            Star --- Unfazed[1]
-            Glass --- DoubleEdge[1]
-            %%end
+            Despair[绝望] --- Suppresion[镇压] --- Stupefy[昏迷]
+            Despair --- Deep[深度创伤]
+
         </div>
 
     </div>
@@ -77,7 +75,191 @@
         mermaid.initialize(config);
     </script>
 
-
+    <header id="title-block-header">
+        <h1 class="title">百炼为战全精通</h1>
+        <p class="author">公理天城翻译官</p>
+    </header>
+    <nav id="TOC" role="doc-toc">
+        <ul>
+            <li><a href="#精通基础知识">精通基础知识</a>
+                <ul>
+                    <li><a href="#精通点的获得">精通点的获得</a></li>
+                    <li><a href="#精通的分类">精通的分类</a></li>
+                    <li><a href="#精通解锁">精通解锁</a></li>
+                    <li><a href="#精通升级">精通升级</a></li>
+                </ul>
+            </li>
+            <li><a href="#精通解说">精通解说</a>
+                <ul>
+                    <li><a href="#进攻型">进攻型</a>
+                        <ul>
+                            <li><a href="#伤害damage">伤害（Damage）</a></li>
+                            <li><a href="#定序器sequencer">定序器（Sequencer）</a></li>
+                            <li><a href="#勇气courage">勇气（Courage）★</a></li>
+                            <li><a href="#反击counterpunch">反击（Counterpunch）</a></li>
+                            <li><a href="#穿透护甲pierce-armor">穿透护甲（Pierce Armor）★</a></li>
+                            <li><a href="#暴击几率critical-rate">暴击几率（Critical Rate）</a></li>
+                            <li><a href="#暴击伤害critical-damage">暴击伤害（Critical Damage）</a></li>
+                            <li><a href="#狙击手sniper">狙击手（Sniper）</a></li>
+                            <li><a href="#枪手gunslinger">枪手（Gunslinger）</a></li>
+                            <li><a href="#追星者star-seeker">追星者（Star Seeker）★★</a></li>
+                            <li><a href="#玻璃大炮glass-cannon">玻璃大炮（Glass Cannon）★</a></li>
+                            <li><a href="#双刃剑double-edge">双刃剑（Double Edge）★★</a></li>
+                            <li><a href="#镇静unfazed">镇静（Unfazed）★★</a></li>
+                            <li><a href="#同心协力stand-together">同心协力（Stand Together）★</a></li>
+                            <li><a href="#暗杀assassin">暗杀（Assassin）★</a></li>
+                            <li><a href="#绝望despair">绝望（Despair）★★</a></li>
+                            <li><a href="#镇压suppression">镇压（Suppression）★★</a></li>
+                            <li><a href="#昏迷stupefy">昏迷（Stupefy）★</a></li>
+                            <li><a href="#深度创伤deep-wounds">深度创伤（Deep Wounds）★★</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#防御型">防御型</a>
+                        <ul>
+                            <li><a href="#生命值health">生命值（Health）</a></li>
+                            <li><a href="#护甲armor">护甲（Armor）</a></li>
+                            <li><a href="#气壮山河full-mettle">气壮山河（Full Mettle）★</a></li>
+                            <li><a href="#近战抵抗resist-melee">近战抵抗（Resist Melee）★</a></li>
+                            <li><a href="#暴击抗性critical-resistance">暴击抗性（Critical Resistance）</a></li>
+                            <li><a href="#暴击伤害抗性critical-damage-resistance">暴击伤害抗性（Critical Damage Resistance）</a></li>
+                            <li><a href="#远程抵抗resist-ranged">远程抵抗（Resist Ranged）★</a></li>
+                            <li><a href="#能量抵抗energy-resistance">能量抵抗（Energy Resistance）</a></li>
+                            <li><a href="#纳米修复nano-repair">纳米修复（Nano Repair）★</a></li>
+                            <li><a href="#疯狂喂食feeding-frenzy">疯狂喂食（Feeding Frenzy）</a></li>
+                            <li><a href="#顽强意志willpower">顽强意志（Willpower）★★</a></li>
+                            <li><a href="#流血抗性bleed-resistance">流血抗性（Bleed Resistance）★</a></li>
+                            <li><a href="#震击抗性shock-resistance">震击抗性（Shock Resistance）★★</a></li>
+                            <li><a href="#电容器capacitor">电容器（Capacitor）★★</a></li>
+                            <li><a href="#燃烧抗性silica-plating">燃烧抗性（Silica Plating）★</a></li>
+                            <li><a href="#抑制器inhibitor">抑制器（Inhibitor）★★</a></li>
+                            <li><a href="#强化格挡enhance-block">强化格挡（Enhance Block）★</a></li>
+                            <li><a href="#校准recalibration">校准（Recalibration）★</a></li>
+                            <li><a href="#背水一战last-stand">背水一战（Last Stand）★★</a></li>
+                            <li><a href="#完美格挡perfect-block">完美格挡（Perfect Block）★</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+    <p>作者：公理天城翻译官</p>
+    <h1 id="精通基础知识">精通基础知识</h1>
+    <p>精通是这个游戏在3.0中加入的功能，用于对角色进行微调，调整的方面很多，有的调整的是基础数值的调整，有的相当于增加了技能。精通是全局性的，不针对特定角色（虽然有些精通对特定角色效果明显）</p>
+    <h2 id="精通点的获得">精通点的获得</h2>
+    <p>在18级开始获得第一点精通，每升一级，会获得一点精通点，在本文写作之日，游戏等级上限已经开放至60级，也就是最多有43点精通。</p>
+    <h2 id="精通的分类">精通的分类</h2>
+    <p>精通分为两个大类：进攻与防御</p>
+    <h2 id="精通解锁">精通解锁</h2>
+    <p>在使用精通前要解锁精通，从解锁的代价来分，有基础型（免精通核），1型（需要1阶精通核，75能量块一个）和2型精通（需要2阶精通核，350一个）。某些精通还有依赖关系，例如前一精通节点解锁后才能解锁，或者总共消耗一定的精通点后方可解锁。可以在精通图点开任何一个精通查看它的解锁条件。
+    </p>
+    <h2 id="精通升级">精通升级</h2>
+    <p>解锁后，每种精通还可以一级一级地激活（提升等级），激活的代价：基础型只要黄金，1型要1阶精通核加黄金，2型需要2阶精通核加能量块，相关代价可点开不同级别查看。升一级多消耗一点精通点。 ## 精通重置
+        如果觉得精通点的分配不满意或者想要尝试新的分配方式，可以点击“重置点数”来把精通点恢复到未使用的状态重新开始分配。这时，已经解锁过的精通和级别，不需要再花精通核解锁，但升级用的黄金和能量块需要重新花费。</p>
+    <h1 id="精通解说">精通解说</h1>
+    <p>精通的分配见仁见智，以下对各个精通进行解说和分析（主要会从触发条件、技能配合与性价比方面去分析）。理解了每个精通的应用场合，如何分配就是玩家自己的事情了。</p>
+    <p>以下精通标题中，无星号为基础型（免解锁），带有一个★号为1阶精通核解锁，★★为2阶精通核解锁。</p>
+    <h2 id="进攻型">进攻型</h2>
+    <h3 id="伤害damage">伤害（Damage）</h3>
+    <p>增加基础攻击评分。注意：这个是按绝对数值来加，不是按百分比（除了那额外的1%是不随级别增加而增加），所以在战力高了之后没有太大用处。实际应用时<strong>解锁到一级</strong>就行了。</p>
+    <h3 id="定序器sequencer">定序器（Sequencer）</h3>
+    <p>增加5连击后连大招时大招的杀伤力。因为这个游戏大招连招的场景非常常用，可以说是绝大部分角色主要的输出手段，触发容易，技能配合高，价格很低，<strong>这个精通值得点满</strong>。</p>
+    <h3 id="勇气courage">勇气（Courage）★</h3>
+    <p>血量低于50%后提升x%的攻击力，并且在升级到3级之后，在血量低于10%后再加倍提升。这个精通主要看血量低于50%的场合，对于竞技场的作用不大，但是在高难度盟战和地图中非常有用，尤其适合觉醒汽车大师，残血斗擎。<strong>建议往高了升</strong>。
+    </p>
+    <h3 id="反击counterpunch">反击（Counterpunch）</h3>
+    <p>闪避近战后为下一次攻击提升攻击力，适合擅长侧闪反击的对手，但是因为只对一次攻击提升攻击力，而一般闪过近战后下一次攻击也只是近战（除非闪了马上放S3），所以提升的输出并不会太高。<strong>建议最多一级</strong>。
+    </p>
+    <h3 id="穿透护甲pierce-armor">穿透护甲（Pierce Armor）★</h3>
+    <p>暴击时能无视敌人x%的护甲。这个精通相对比较隐性：由于护甲值一直是个隐藏参数，能起到多少效果并不好判断。例如，这个精通升级到5级的时候无视14%的护甲，但这相当于几层破甲？不得而知。<strong>建议点一级，为后面两个解锁</strong>。
+    </p>
+    <h3 id="暴击几率critical-rate">暴击几率（Critical Rate）</h3>
+    <p>提升暴击率。如果你的角色很依赖暴击（比如觉醒战擎，反冲，风刃漂移雷震等），这个精通很值得，而且不花成本。<strong>建议点满</strong>。但是要注意面对碎骨魔和觉醒犀牛的时候要小心，而且如果打开了这个精通，铁皮这种近战暴击为0的角色打碎骨魔都会吃流血。
+    </p>
+    <h3 id="暴击伤害critical-damage">暴击伤害（Critical Damage）</h3>
+    <p>提升暴击伤害。暴击伤害是建立在能出暴击的基础上的，所以如果你的主力不是有必然暴击的能力，还是要先把暴击几率提升上去再点暴击伤害。<strong>建议点满</strong>。</p>
+    <h3 id="狙击手sniper">狙击手（Sniper）</h3>
+    <p>离对方越远，远程攻击的伤害和格挡穿透越高，适合远程选手。然而事实上这游戏远程小枪的伤害总体来说都不大并且命中很低，除了铁皮，大部分角色都不能靠躲在一边点枪放炮来过日子。<strong>如果主力是远程选手建议点高一些，否则就空着</strong>。
+    </p>
+    <h3 id="枪手gunslinger">枪手（Gunslinger）</h3>
+    <p>闪避远程攻击后为下一次攻击提升攻击力，参考“反击”。但是这个精通的数值比例比反击还低。<strong>建议空着</strong>。</p>
+    <h3 id="追星者star-seeker">追星者（Star Seeker）★★</h3>
+    <p>连击越高，杀伤力越高，触发场合几乎是全天候，但是如果平时不能随随便便打出30连击以上，实际提升的比例也不算高，适合技术好不容易被敌人击中的玩家。而且解锁它之后才能解锁后面几个精通，所以如果你是进攻型选手，还是值得打开的。<strong>建议先点一级，后续根据财力和连击水准慢慢往上升</strong>。
+    </p>
+    <h3 id="玻璃大炮glass-cannon">玻璃大炮（Glass Cannon）★</h3>
+    <p>加攻减生命，属于牺牲续航提高输出。触发场合是任何时候。由于输出是这个游戏的核心，所以也适合平时受伤少的玩家，加快解决战斗。性价比不错。<strong>建议机器人战力上去之后点满</strong>。</p>
+    <h3 id="双刃剑double-edge">双刃剑（Double Edge）★★</h3>
+    <p>大幅度提升攻击，但是开场后就会因流血失去一定比例的生命。这是一个又贵又局限的精通，在一级的时候就会损失9%的生命值，试想一场盟战下来，走11个敌人自己光因为流血就几乎挂掉了。所以，除非你的主力有清除DOT的能力（觉醒钢锁，野兽净化组）或者高续航（救护车，战擎），最好还是不要贸然使用。
+    </p>
+    <h3 id="镇静unfazed">镇静（Unfazed）★★</h3>
+    <p>敌人规避你的攻击时，有一定概率我方角色在1秒内会变得不可阻挡并且下一次攻击加x%的攻。也就是说有一定的概率防止敌人规避后马上回击你。但是这的确是游戏中最坑的精通之一，首先它是个2阶精通。高昂的价格换来的却只是面对规避型角色（两个大黄蜂，横炮，路障等）才起效，而非很多人以为的普通的闪避也触发。而且在5级概率也只有50%。<strong>建议空着</strong>。
+    </p>
+    <h3 id="同心协力stand-together">同心协力（Stand Together）★</h3>
+    <p>在单人和同盟任务中，打Boss时每多一个活人，就加x%的攻。基本上没有太大作用，因为盟战走到最后的时候如果大家手上还全是活人的话——为什么不提难度？！<strong>建议无视</strong>。</p>
+    <h3 id="暗杀assassin">暗杀（Assassin）★</h3>
+    <p>敌人生命值低于18%的时候我方加攻x%，并且遏制敌人防御类能力（回血，护甲，抗性）触发的几率y%。如果开始战斗的时候敌人生命值就低于18%，我方还额外提升进攻型能力（DOT，暴击）的触发几率z%。
+        适合用来更快结束战斗，以免夜长梦多，尤其是斗擎/觉醒大师的翻盘或者救护车的回血，在面对高难度对手时如果打到18%血以下被KO，再上去打的时候会更舒服一些。降低对方能力触发的概率也非常有用（震荡波的回血，声波的反弹等）。但是不建议点到很高，因为很多玩家表示好像效果一般，甚至可能没有起效果。<strong>建议最多一级</strong>。
+    </p>
+    <h3 id="绝望despair">绝望（Despair）★★</h3>
+    <p>每个敌人身上的减益会降低x%的治疗和修复效果，这个仅仅在我方角色施加减益较多，且对方有治疗和修复效果时才起作用，总之就是防止不死小强。<strong>建议最多一级，主要是为了解锁深度创伤</strong>。</p>
+    <h3 id="镇压suppression">镇压（Suppression）★★</h3>
+    <p>对方被击晕时减少x%的能力触发概率，并少修复y%的生命值（中文翻译会让人误解为我方眩晕）。使用场合非常小的精通，因为修复能力强的无非是救护车和震荡波，但是救护车回血厉害的S2过程是不可能晕的。<strong>建议空着</strong>。
+    </p>
+    <h3 id="昏迷stupefy">昏迷（Stupefy）★</h3>
+    <p>延长眩晕时间。几个眩晕能力突出的角色如喷气机，救护车，铁皮，横炮，他们的基础眩晕时间是足够的，不延长也不会错过上去痛扁的机会，延长时间无非是可以多点上一梭子。真正能利用上的倒是警车的小枪冷不丁打出眩晕，延长时间反应过来后可以上去打。<strong>建议无视</strong>。
+    </p>
+    <h3 id="深度创伤deep-wounds">深度创伤（Deep Wounds）★★</h3>
+    <p>延长流血DOT的持续时间，并且我方比对方血多时，额外造成伤害。流血系专用！虽然贵，但是是赤裸裸地提升输出。并且对风刃来说，加大堆满四层流血晕人的概率。对觉醒碎骨魔来说，还额外延长了加攻加气和减攻减气的时间。<strong>建议根据自己手上的流血主力来考虑</strong>，有两个或更多就往高了升。
+    </p>
+    <h2 id="防御型">防御型</h2>
+    <p>这个游戏鼓励进攻远大于鼓励防御，所以很多人都会把大部分精通点砸到进攻图谱中。防御主要让人关注的是千斤顶的纳米修复，但为了纳米修复，防御图谱的左边要点上10点，所以一般建议稳妥的方式也就是防御这边留11点（毕竟这11点全砸到攻击里面也要买很多精通核）。
+    </p>
+    <h3 id="生命值health">生命值（Health）</h3>
+    <p>增加基础生命值。注意：与“伤害”类似，这个是按绝对数值来加，不是按百分比（除了那额外的2%是不随级别增加而增加），<strong>解锁到一级</strong>就行了。</p>
+    <h3 id="护甲armor">护甲（Armor）</h3>
+    <p>提高护甲，还是那句话，因为护甲值是隐性参数，所以1%和4%到底有多大区别，尚不清楚。建议<strong>解锁一级</strong>就行。</p>
+    <h3 id="气壮山河full-mettle">气壮山河（Full Mettle）★</h3>
+    <p>高血量时加护甲，升到第3级的话，前15%的血都比原来要硬10%。但是——特别怕破甲型选手如通天晓和红蜘蛛。相比进攻那边对标的“勇气”，气壮山河的触发场合少很多。<strong>建议最多一级</strong>。</p>
+    <h3 id="近战抵抗resist-melee">近战抵抗（Resist Melee）★</h3>
+    <p>减少x%的近战伤害，其实就是变相地提升了一定的生命值，性价比一般。<strong>建议一级</strong>。</p>
+    <h3 id="暴击抗性critical-resistance">暴击抗性（Critical Resistance）</h3>
+    <p>减低受到暴击的概率。不赘述。<strong>建议一级</strong>。</p>
+    <h3 id="暴击伤害抗性critical-damage-resistance">暴击伤害抗性（Critical Damage Resistance）</h3>
+    <p>降低受到暴击的伤害。由于触发场合比近战抵抗要少，所以也便宜。<strong>建议一级</strong>。</p>
+    <h3 id="远程抵抗resist-ranged">远程抵抗（Resist Ranged）★</h3>
+    <p>减少x%的远程伤害，其实就是变相地提升了一定的生命值，性价比一般。<strong>建议最多一级</strong>。</p>
+    <h3 id="能量抵抗energy-resistance">能量抵抗（Energy Resistance）</h3>
+    <p>降低能量型攻击的伤害（注意，漂移雷震和反冲扔出来的剑和镖算物理攻击）。<strong>建议最多一级</strong>。</p>
+    <h3 id="纳米修复nano-repair">纳米修复（Nano Repair）★</h3>
+    <p>开局后一定时间内微微地回血，由于回血量是绝对值，在游戏初期并无大用。但后来出了千斤顶之后成为他的绝配，因为可以让千斤顶在有护盾的时候反复触发护盾（但Dot伤害可破）。<strong>建议有千斤顶升满，没有千斤顶就空着</strong>。
+    </p>
+    <h3 id="疯狂喂食feeding-frenzy">疯狂喂食（Feeding Frenzy）</h3>
+    <p>单人任务和盟战中碰到饿鲨时根据造成的伤害给自己回血。<del>只对饿鲨时有效，但因为不贵，可以解锁一级并妥善利用。现在特殊和盟战遍地是恼人的饿鲨，反正也得打，可以省一些修复药。尤其像面对高阶盟战中血特别长又没有第三招的饿鲨，一般都能打出比较好的成绩，回血也是妥妥的，这时也有不少玩家是会砸能量块升满的。</del>盟战地图再次改版后没有饿鲨了，这个精通基本上已废。<strong>建议空着</strong>。
+    </p>
+    <h3 id="顽强意志willpower">顽强意志（Willpower）★★</h3>
+    <p>遭受DOT的时候像斗擎那样把伤害转换为自己的回血。虽然可回血的场合是各种DOT，但是比起斗擎自己的顽强意志，这个回血比例还是低了太多（最高9%），但只有解锁它才能解锁下面三种DOT抗性。<strong>建议一级</strong>。
+    </p>
+    <h3 id="流血抗性bleed-resistance">流血抗性（Bleed Resistance）★</h3>
+    <p>增加x%的流血抗性，减少流血伤害。在早期突袭的基地标配伤害加速器的情况下，这个精通很好地提升了续航，并且第1级就有14%的抗性，适合经常突袭又没有净化角色的玩家。与双刃剑配合使用也可以，但其实随着抗流血的方法越来越多，基地防守中已经很少出现伤害加速器了。<strong>建议最多一级</strong>。
+    </p>
+    <h3 id="震击抗性shock-resistance">震击抗性（Shock Resistance）★★</h3>
+    <p>增加x%的震击抗性。不知为何，游戏中有震击能力的角色和模块与流血的角色和模块不相上下，这个精通却比流血和燃烧抗性都贵，而且1级只有5%。打高阶盟战的玩家遇到震击格挡又没有净化的时候，与其考虑这个精通了，不如跟有净化的盟友商量不走震击格挡线，<strong>建议空着</strong>。
+    </p>
+    <h3 id="电容器capacitor">电容器（Capacitor）★★</h3>
+    <p>在受到震击时给我方加能量，加的比例实在太少。<strong>建议空着</strong>。</p>
+    <h3 id="燃烧抗性silica-plating">燃烧抗性（Silica Plating）★</h3>
+    <p>增加x%的燃烧抗性。燃烧的角色相比少一些，这个精通虽然便宜，但1级也只有5%。<strong>建议空着</strong>。</p>
+    <h3 id="抑制器inhibitor">抑制器（Inhibitor）★★</h3>
+    <p>敌人眩晕或者被震击时，力量功率分别减少x%和y%。一个不太好理解的精通，它更像是攻击型的精通，因为触发条件是主动型，另外二阶的定价也有些虚高。适合喷气机、救护车这种可以连晕的角色，避免在连晕对手过程中对手很快被打红。但如果不升到很高的级别，几乎也抑制不住。<strong>建议空着</strong>。
+    </p>
+    <h3 id="强化格挡enhance-block">强化格挡（Enhance Block）★</h3>
+    <p>提升格挡熟练度，减少防御伤害。对于喜欢闪避的玩家作用不大，减伤比例也很低。<strong>建议空着</strong>。</p>
+    <h3 id="校准recalibration">校准（Recalibration）★</h3>
+    <p>减少眩晕时间。由于电脑并不太利用你的眩晕，这个精通使用场合很低。<strong>建议空着</strong>。</p>
+    <h3 id="背水一战last-stand">背水一战（Last Stand）★★</h3>
+    <p>生命值低于x%时可以挡住敌人的重击。其实只要适应这个游戏一段时间，敌人的重击总的来说还是比较好闪避的，所以这个精通作用场合很少，例如被敌人压在墙角打的时候可以防止偶尔被电脑坑一把重击，或者声波把你逼到墙角时出重击（事实上现在声波的重击也不是无解了）。<strong>建议空着</strong>。
+    </p>
+    <h3 id="完美格挡perfect-block">完美格挡（Perfect Block）★</h3>
+    <p>格挡时有x%的概率不受任何伤害（在格挡特殊攻击时减半），由于这个游戏根本不鼓励格挡，这个精通真心没必要。<strong>建议空着</strong>。</p>
 
 </body>
 
