--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <h1 class="title">百炼为战信息小站</h2>
     <!-- </div> -->
     <ul>
-        <li><a href="tftf-chars.html">全人物解析</a></li>
+        <li><a href="chars_book/index.html">全人物解析</a></li>
         <li><a href="tftf-radar-chart.html">全人物能力图谱</a></li>
         <li><a href="tftf-masteries.html">精通解析</a></li>
         <li><a href="rok3.html">塞伯坦传奇3（无震天尊）攻略</a></li>
