更新亡灵天尊

--- a/chars_book/战士系.html
+++ b/chars_book/战士系.html
@@ -768,19 +768,19 @@
 <div id="特点分析-22" class="section level3" number="5.8.1">
 <h3><span class="header-section-number">5.8.1</span> 特点分析</h3>
 <p>在言之凿凿表示“不会再有新机器人”之后，坊间盛传Kabam失去了孩之宝的变形金刚人物授权。然而游戏接近3周年庆之前发布了塞伯坦传奇3，奖励中出现“泰坦货币”，它的作用在8.4版更新后揭示出来——与千呼万唤始上架的五星震天尊一同上架的还有百炼为战游戏原创人物——亡灵天尊！</p>
+<p>最初普通认为他和惊天雷、暗黑擎天柱一样是标准震天尊重涂，事实上两者除了S3相同外，差距非常大。亡灵天尊的重击是狂飙的近战重击，5连的动作仅部分与震天尊相似，S1与其说有震天尊S1的样子，不如说是野牛S1的飞全屏版（并且S1很难完美闪掉），S2是犀牛的动作。</p>
 <div id="能力-22" class="section level4" number="5.8.1.1">
 <h4><span class="header-section-number">5.8.1.1</span> 能力</h4>
-<p>亡灵天尊被设计为战士系，最初普通认为他和惊天雷、暗黑擎天柱一样是标准的重涂，所有动作和S技都和震天尊一模一样，事实上两者除了S3，差距非常大。亡灵天尊的重击是狂飙的近战重击，5连的动作仅部分与震天尊相似，S1与其说有震天尊S1的样子，不如说是野牛S1的飞全屏版（并且S1很难完美闪掉），S2是犀牛的动作。</p>
 <ul>
 <li>完成一套连击，对手规避概率减少20%，作为战士，对侦查系有一定的克制。</li>
-<li>对手能量比自己多时，降对手能量功率。正常情况下开局打对方一套连击，我方得到的怒气是较少的，但是亡灵天尊打一套，基本上双方的加气相同。</li>
-<li>生命降到10%以下时，亡天尊推开对手并获得2格能量。10秒内全身起火，点燃身边的对手。相比震天尊，这个技能显得没有那么神奇，第一这10秒不是完全不死状态，第二这2格能量不是瞬间获得，所以玩家自己用的时候不要太指望，面对电脑到10%的时候也不要太害怕。有逆火的角色在这个时候施加上逆火，对方的亡灵天尊很可能就自杀了。</li>
+<li>对手能量比自己多时，降对手能量功率20%。正常情况下开局打对方一套连击，我方得到的怒气是较少的，但是亡灵天尊打一套，基本上双方的加气相同。这是一种动态控气的设定。</li>
+<li>生命降到10%以下时，亡天尊推开对手并获得2格能量。10秒内全身起火，点燃身边的对手。相比震天尊，这个技能显得没有那么神奇，第一这10秒不是完全不死状态，第二这2格能量不是瞬间获得，所以玩家自己用的时候不要太指望，面对电脑到10%的时候如果不能马上控气，就“顶着熊熊烈火”上去尽快结束战斗吧。有逆火的角色在这个时候施加上逆火，对方的亡灵天尊充到S3后很可能就自杀了。</li>
 <li>泰坦充能：打中对手加1层充能，觉醒前最多20层；得到一格能量，加5层充能；每层充能加0.5 ~ 1.5%的攻击。</li>
 <li>被击倒时失去5个充能。</li>
 <li>重击时每个充能加1%的暴击概率。</li>
-<li>充能达到20层或以上时触发颠覆力量（由于中文乱码，该技能译自英文）并获得进一步加攻，但是格挡熟练度和近战防御力下降。这有点像震天尊的狂怒遗迹（黄球），但不是轻易能切换回去的。</li>
-<li>在颠覆力量状态下击中敌人将100%造成一层流血，为期6秒，不可叠加，但小枪和近战都可刷新。基本上可以说流血不停。值得搭配深度创伤的精通。</li>
-<li>颠覆力量状态下敌人如果发动S技，亡灵天尊有概率变得不可阻挡0.95秒。这可以在不慎吃到S技的时候没有硬直，如果是多段S技，可以逃过后续的进攻。</li>
+<li>充能达到20层或以上时触发势不可挡的力量获得进一步加攻，但是格挡熟练度和近战防御力下降。这有点像震天尊的狂怒遗迹（黄球），但不是轻易能切换回去的。</li>
+<li>在势不可挡的力量状态下击中敌人将100%造成一层6秒的流血，不可叠加，但小枪和近战都可刷新，基本上可以保持流血不停。值得搭配深度创伤的精通。</li>
+<li>势不可挡的力量状态下敌人如果发动S技，亡灵天尊有概率变得不可阻挡0.95秒。这可以在不慎吃到S技的时候没有硬直，如果是多段S技，可以逃过后续的进攻。</li>
 <li>S1：60%的概率提升30%的能量功率6秒，消耗10个充能</li>
 <li>S2：65%的概率提升20%的暴击率12秒，消耗15个充能</li>
 <li>S3：85%的概率施加流血7秒，消耗20个充能</li>
@@ -803,14 +803,15 @@
 </div>
 <div id="短板-22" class="section level4" number="5.8.1.4">
 <h4><span class="header-section-number">5.8.1.4</span> 短板</h4>
-<p>如果不考虑无关痛痒的饿鲨，亡灵天尊是作为Kabam真正意义上的“亲儿子”出场的原创角色，其获取的难度之大，理应让他站在食物链的最顶端，至少与震天尊比肩，毕竟这是一个泰坦和震天尊进行火种融合后的产物嘛！然而他的类别就已然让他矮了一截：他被安排进了游戏中整体最弱的战士系……技能看起来比较复杂，但进攻的核心依然是围绕连击、流血与暴击，这与战士系的代表人物漂移有相似之处。而他作为战士系，引以为傲的流血技能也被上游的斗士系克得死死。尤其是连小枪和普通近战都100%刷新流血时间，高觉醒的猩猩站着不动让亡灵天尊打，也只是越打血越多——玩家实测中，一只满锻猩猩站着不动让故事终章的亡灵天尊Boss打了2000多下，还是满血！
-三个S技并无什么特别功能，在觉醒前，发动S技的时候可能会把亡灵天尊从颠覆力量状态切换为普通状态。觉醒之后因为很容易顶到40个满充能，此时即便放S3也不会少于20个充能了（除非被击倒再减5个）。也就是说亡灵天尊只要觉醒，进入战斗后很快就变得攻强守弱，而不是像震天尊会反复切换攻守。虽然有概率性的霸体能保命，却没有震天尊傲视群雄的吸血续航和天然加气。
-总的来说，亡灵天尊在蝎子没有意见的情况下或可与其并称战士一哥，但如果后续不进行加强，是对不起他在这个游戏中的地位的。</p>
+<p>如果不考虑无关痛痒的饿鲨，亡灵天尊是作为Kabam真正意义上的“亲儿子”出场的原创角色，其获取的难度之大，理应让他站在食物链的最顶端，至少与<a href="爆破系.html#震天尊">震天尊</a>比肩，毕竟这是一个泰坦和震天尊进行火种融合后的产物嘛！然而先不说他没有震天尊的自动加气和10秒不死金身，他的类别就已然让他矮了一截：他被安排进了游戏中整体最弱的战士系……技能看起来比较复杂，但进攻的核心依然是围绕连击、流血与暴击，这与战士系的代表人物漂移有相似之处。而他作为战士系，引以为傲的流血技能也被上游的斗士系克得死死。尤其是连小枪和普通近战都100%刷新流血时间，高觉醒的猩猩站着不动让亡灵天尊打，也只是越打血越多——玩家实测中，一只满锻猩猩站着不动让故事终章的亡灵天尊Boss打了2000多下，还是满血！</p>
+<p>三个S技并无什么特别功能，在觉醒前，发动S技的时候可能会把亡灵天尊从颠覆力量状态切换为普通状态。觉醒之后因为很容易顶到40个满充能，此时即便放S3也不会少于20个充能了（除非被击倒再减5个）。也就是说亡灵天尊只要觉醒，进入战斗后很快就变得攻强守弱，而不是像震天尊会反复切换攻守。虽然有概率性的霸体能保命，却没有震天尊傲视群雄的吸血续航和天然加气。</p>
+<p>官方在发布后可能是根据玩家的实测对亡灵天尊的数值进行了一定的调整，使其伤害爆表。</p>
 </div>
 </div>
 <div id="推荐打法-22" class="section level3" number="5.8.2">
 <h3><span class="header-section-number">5.8.2</span> 推荐打法</h3>
-<p>标准的近战角色打法，短战斗围绕S1快速获得能量，长战斗可以用S2加一些伤害。S3纯鸡肋，不需要使用。</p>
+<p>由于进入势不可挡的力量会让他攻强守弱，连格挡伤害都更高，亡灵天尊在使用时要保护好自己，但由于输出很高，结束战斗也快。</p>
+<p>推荐按漂移这种标准的堆连击、少用重击的打法，短战斗围绕S1快速获得能量（频繁放空气槽，也能利用到动态控气的能力）。长战斗可以用S2加一些伤害。S3纯鸡肋，不需要使用。</p>
 </div>
 <div id="基地防守-22" class="section level3" number="5.8.3">
 <h3><span class="header-section-number">5.8.3</span> 基地防守</h3>
